add 增加图片相关接口